force-app/main/default/objects/Fire__c/Fire__c.object-meta.xml
<CustomObject>
    <label>Fire</label>
    <nameField>
        <label>Fire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>