force-app/main/default/objects/Fire__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Calculates age in days</description>
    <formula>IF( NOT( ISBLANK( Startdate__c ) ) ,
  IF( DATE( 2000 , MONTH( Startdate__c ) , DAY( Startdate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
      DAY (Today()) - DAY ( IF( NOT( ISBLANK( Stopdate__c ) ), Stopdate__c ), Startdate__c ),
      DAY (Today()) - DAY ( IF( NOT( ISBLANK( Stopdate__c ) ), Stopdate__c ), Startdate__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>