force-app/main/default/objects/Fire__c/fields/Altitude__c.field-meta.xml
<CustomField>
    <fullName>WindSpeed__c</fullName>
    <label>Wind Speed (km/h)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>