force-app/main/default/objects/Fire__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Calculates elapsed time between start and finish in days</description>
    <formula>IF( NOT( ISBLANK( FinishDateTime__c ) ) ,
      IF(FinishDateTime__c - StartDateTime__c > 0 ,
        TEXT( FLOOR( FinishDateTime__c - StartDateTime__c ) ),
        ""
      ),
      IF(Today() - StartDateTime__c > 0 ,
        TEXT( FLOOR( Today() - StartDateTime__c ) ),
        ""
      ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (days)</label>
    <type>Text</type>
</CustomField>