force-app/main/default/objects/Fire__c/fields/FinishDateTime__c.field-meta.xml
<CustomField>
    <fullName>FinishDateTime__c</fullName>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>