force-app/main/default/objects/Fire__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Radius__c</fullName>
    <label>Radius (cm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>