force-app/main/default/objects/Fire__c/fields/Startdate__c.field-meta.xml
<CustomField>
    <fullName>Startdate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>