force-app/main/default/objects/Fire__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>