force-app/main/default/objects/Fire__c/fields/Stopdate__c.field-meta.xml
<CustomField>
    <fullName>Stopdate__c</fullName>
    <label>Stop Date</label>
    <type>Date</type>
</CustomField>