force-app/main/default/objects/Fire__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature (celcius)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>