force-app/main/default/objects/Fire__c/fields/WindDirection__c.field-meta.xml
<CustomField>
    <fullName>WindDirection__c</fullName>
    <label>Wind Direction</label>
    <type>TextArea</type>
</CustomField>