force-app/main/default/objects/Fire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Radius__c</columns>
    <columns>Supervisor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>